Issue #3387399 by jwilson3: Update multistep progress indicator to pass WCAG AA color contrast

--- a/css/webform.progress.tracker.css
+++ b/css/webform.progress.tracker.css
@@ -11,7 +11,7 @@
 .webform-progress-tracker .progress-step .progress-text {
   padding-top: 5px;
   padding-bottom: 0;
-  color: #777;
+  color: #767676;
 }
 
 .webform-progress-tracker .progress-step.is-active .progress-text,
@@ -29,7 +29,7 @@
 .webform-progress-tracker .progress-step:not(.is-active) .progress-marker::before,
 .webform-progress-tracker .progress-step:hover .progress-marker::before,
 .webform-progress-tracker .progress-step .progress-marker::after {
-  background-color: #777;
+  background-color: #767676;
 }
 
 .webform-progress-tracker .progress-step.is-complete .progress-marker::before,
